src/styles/global-styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
}
html,
body {
  font-size: 16px;
  scroll-behavior: smooth;
}
body {
  font-family: Roboto, "-apple-system", BlinkMacSystemFont, "Segoe UI", Arial,
    sans-serif;
  font-weight: 400;
  background-color: var(--backgroundColor);
  overflow-x: hidden;
}

::-webkit-input-placeholder {
  /* Edge */
  color: #c2c2c2;
}
:-ms-input-placeholder {
  /* Internet Explorer */
  color: #c2c2c2;
}
::placeholder {
  color: #c2c2c2;
}

.video-responsive {
  position: relative;
  padding-bottom: 56.2%;
}
.video-responsive iframe {
  position: absolute;
  width: 100%;
  height: 100%;
}

a {
  color: var(--textColor);
  transition: color 0.15s;
  text-decoration: none;
}
a:hover {
  color: #ff6975;
}

.paragraph {
  margin: 1rem 0 2.5rem;
  line-height: 1.56;
  font-size: 16px;
  overflow-wrap: break-word;
}

.headerTitle {
  height: auto;
  font-size: 22px;
  line-height: 1;
  font-weight: 700;
  color: #000;
  margin-top: 16px;
  text-transform: uppercase;
  display: inline-block;
}
.headerTitle a {
  color: #000;
}

.headerTitle a:hover {
  text-decoration: none;
  opacity: 0.8;
}

pre {
  border: 0 !important;
  background-color: rgb(245, 247, 249);
}

blockquote {
  color: rgb(116, 129, 141);
  margin: 0px 0px 24px;
  padding: 0px 0px 0px 12px;
  border-left: 4px solid rgb(230, 236, 241);
}

ol,
ul {
  padding-inline-start: 1.3em;
}

ol > li::marker {
  font-weight: 700;
}

ol > li > p.paragraph,
ul > li > p.paragraph {
  margin: 0.5rem 0 1rem;
}

ul > li {
  font-size: 16px;
  line-height: 1.8;
  font-weight: 400;
}

.socialWrapper {
  display: flex;
  align-items: center;
}
.socialWrapper li {
  display: inline-block;
}
.socialWrapper li a {
  display: contents;
}

img {
  max-width: 100%;
}

.heading1,
.heading2,
.heading3,
.heading4,
.heading5,
.heading6 {
  line-height: 1.5;
  margin-bottom: 16px;
  margin-top: 16px;
}

.heading1 {
  font-size: 26px;
  font-weight: 700;
}

.heading2 {
  font-size: 24px;
  font-weight: 700;
}

.heading3 {
  font-size: 20px;
  font-weight: 600;
}

.heading4 {
  font-size: 18px;
  font-weight: 500;
}

.heading5 {
  font-size: 16px;
  font-weight: 400;
}

.heading6 {
  font-size: 14px;
  font-weight: 400;
}

.tal {
  text-align: left;
}
.tar {
  text-align: right;
}
.tac {
  text-align: center;
}

.gatsby-resp-image-figure {
  text-align: center;
}

.gatsby-resp-image-figcaption {
  margin-top: 1rem;
}

